# QtGitHubActions

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml  python.yml
logiclib/: CMakeLists.txt  dummyprinter.cpp  dummyprinter.h
logiclibtests/: CMakeLists.txt  dummyprintertests.cpp  dummyprintertests.h  main.cpp
